--- a/example_entry_test.ipynb
+++ b/example_entry_test.ipynb
@@ -77,13 +77,13 @@
     "### Question 2           \n",
     "**[3 marks]**\n",
     "\n",
-    "Present value (PV) is a financial calculation to find the current value of a future sum of money or cash stream in today at a specific rate of return.\n",
+    "Present value (PV) is a financial calculation to find the current value of a future sum of money or cash stream in today's money at a specific rate of return.\n",
     "\n",
     "**Write a function to calculate the present value of a future value.**\n",
     "\n",
     "The **present value** of a future value is calculated as follows:\n",
     "\n",
-    "$$PV = \\dfrac{FV}{1 + r}^n $$\n",
+    "$$PV = \\dfrac{FV}{(1 + r)^n} $$\n",
     "\n",
     "Where **r** is rate of return and **FV** is the future value.\n",
     "\n",
