--- a/example_entry_test.ipynb
+++ b/example_entry_test.ipynb
@@ -29,7 +29,7 @@
     "---\n",
     "\n",
     "\n",
-    "There are 7 questions worth a total of 30 marks.\n",
+    "There are 7 questions worth a total of 30 marks.  The pass mark for the test is 15 marks.\n",
     "\n",
     "You are allowed to use any text editor or IDE. You are not allowed to use any other software, search the internet for answers or look at any othe reference material including a book.\n",
     "\n",
@@ -182,7 +182,7 @@
     "### QUESTION 3: \n",
     "**[5 marks]**\n",
     "\n",
-    "**Write a function called `fizzbuzz` that accepts a integer parameter `n`.  The function should check if `n` is multiple of 3, 5 or both. The function should return a string as specified below**  \n",
+    "**Write a function called `fizzbuzz` that accepts an integer parameter `n`.  The function should check if `n` is multiple of 3, 5 or both. The function should return a string as specified below**  \n",
     "\n",
     "* If the number is a multiple of 3 return \"FIZZ\"\n",
     "* Else If the number is a multiple of 5 return \"BUZZ\"\n",
@@ -262,14 +262,58 @@
    "source": [
     "### QUESTION 4\n",
     "\n",
-    "[4 MARKS]\n",
+    "**[4 MARKS]**\n",
     "\n",
-    "Using your `fizzbuzz` function, code a python programme that **loops** over the array provided below and repeatedly calls `fizzbuzz` and prints the result. \n",
+    "The function `convert_celsius_to_fahrenheit()` provided below accepts a float parameter `deg_celsius` that represents a temperature in degrees celcius.  Using the standard formula it calculates and returns a float representing the corresponding temperature in degrees fahrenheit.\n",
+    "\n",
+    "The list below represents a range of temperatures in degrees celsius that a researcher needs to convert into degrees fahrenheit. \n",
     "\n",
     "```python\n",
-    "test_data = [1, 3, 5, 15, 23]\n",
+    "celsius = [39.2, 36.5, 37.3, 41.0]\n",
     "```\n",
     "\n",
+    "Code a python programme that **creates a new list called `degrees_f`.**  The code must **loop** over the `celsius` list and repeatedly call `convert_celsius_to_fahrenheit` passing in the current list item in the iteration. Print the new list `degrees_f` (temperature in degrees fahrenheit) to the screen.\n",
+    "\n",
+    "**FUNCTIONS PROVIDED**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_celsius_to_fahrenheit(deg_celsius):\n",
+    "    \"\"\"\n",
+    "    Convert degress celsius to fahrenheit\n",
+    "    Returns float value - temp in fahrenheit\n",
+    "    \n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    deg_celcius: float\n",
+    "        temp in degrees celsius\n",
+    "        \n",
+    "    Returns:\n",
+    "    -------\n",
+    "    float\n",
+    "    \"\"\"\n",
+    "    return (9/5) * deg_celsius + 32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#list of temps in degree celsius to convert to fahrenheit\n",
+    "celsius = [39.2, 36.5, 37.3, 41.0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**EXAMPLE ANSWER 1**"
    ]
   },
@@ -282,21 +326,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "FIZZ\n",
-      "BUZZ\n",
-      "FIZZBUZZ\n",
-      "23\n"
+      "[102.56, 97.7, 99.14, 105.8]\n"
      ]
     }
    ],
    "source": [
     "#solution using a for loop\n",
-    "test_data = [1, 3, 5, 15, 23]\n",
-    "\n",
-    "for n in test_data:\n",
-    "    result = fizzbuzz(n)\n",
-    "    print(result)"
+    "degrees_f = []\n",
+    "for degrees_c in celsius:\n",
+    "    result = convert_celsius_to_fahrenheit(degrees_c)\n",
+    "    degrees_f.append(result)\n",
+    "print(degrees_f)"
    ]
   },
   {
@@ -308,22 +348,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1', 'FIZZ', 'BUZZ', 'FIZZBUZZ', '23']\n"
+      "[102.56, 97.7, 99.14, 105.8]\n"
      ]
     }
    ],
    "source": [
     "#solution using a list comprehension\n",
-    "test_data = [1, 3, 5, 15, 23]\n",
-    "results = [fizzbuzz(n) for n in test_data]\n",
-    "print(results)"
+    "degrees_f = [convert_celsius_to_fahrenheit(degrees_c) for degrees_c in celsius]\n",
+    "print(degrees_f)"
    ]
   },
   {
