TEST: fixed typo in Q4

--- a/example_entry_test.ipynb
+++ b/example_entry_test.ipynb
@@ -264,7 +264,7 @@
     "\n",
     "**[4 MARKS]**\n",
     "\n",
-    "The function `convert_celsius_to_fahrenheit()` provided below accepts a float parameter `deg_celsius` that represents a temperature in degrees celcius.  Using the standard formula it calculates and returns a float representing the corresponding temperature in degrees fahrenheit.\n",
+    "The function `convert_celsius_to_fahrenheit()` provided below accepts a float parameter `deg_celsius` that represents a temperature in degrees celsius.  Using the standard formula it calculates and returns a float representing the corresponding temperature in degrees fahrenheit.\n",
     "\n",
     "The list below represents a range of temperatures in degrees celsius that a researcher needs to convert into degrees fahrenheit. \n",
     "\n",
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
